--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
-{
   "rewrites": [
-    {
-      "source": "/api/(.*)",
-      "destination": "/api/index.py"
-    },
-    {
-      "source": "/(.*)",
-      "destination": "/"
-    }
+    { "source": "/(.*)", "destination": "api/index.py" }
   ]
-}
